# bad-tls-cpp

./: CLAUDE.md  CMakeLists.txt  Containerfile  README.md  container-check.sh
.github/workflows/: check.yml
definitions/: ecprivatekey.asn1  x509.asn1
include/asn1/: ast.hpp  based.hpp  fixed_string.hpp  fixed_vector.hpp  lexer.hpp  parser.hpp  pem.hpp
include/asn1/der/: codegen.hpp  reader.hpp  tag.hpp  types.hpp  writer.hpp
include/asn1/x509/: trust_store.hpp  verify.hpp
include/crypto/: chacha20.hpp  chacha20_poly1305.hpp  ecc.hpp  ecdh.hpp  ecdsa.hpp  gcm.hpp  hkdf.hpp  poly1305.hpp  random.hpp  rsa.hpp  sha2.hpp  x25519.hpp
include/number/: aes.hpp  block_cipher_concept.hpp  ecc.hpp  ecdsa.hpp  gcm.hpp  hash_concept.hpp  hmac.hpp  hmac_sha256.hpp  number.hpp  rsa.hpp  sha2.hpp  sha256.hpp  sha384.hpp  tls_prf.hpp
include/tls/: cipher_suite.hpp  client.hpp  connection.hpp  dtls_client.hpp  dtls_connection.hpp  dtls_handshake.hpp  dtls_record.hpp  dtls_record_protection.hpp  dtls_server.hpp  handshake.hpp  key_schedule.hpp  keylog.hpp  private_key.hpp  record.hpp  record_protection.hpp  server.hpp  session_cache.hpp  tcp_transport.hpp  tls13_cipher_suite.hpp  tls13_client.hpp  tls13_connection.hpp  tls13_extensions.hpp  tls13_handshake.hpp  tls13_key_schedule.hpp  tls13_record_protection.hpp  tls13_server.hpp  transcript.hpp  transport.hpp  types.hpp  udp_transport.hpp
include/x509/: basic_constraints_verifier.hpp  hostname_verifier.hpp  key_usage_verifier.hpp  mozilla_roots.hpp  time_verifier.hpp  trust_store.hpp  verify.hpp
tests/: capture_wrapper.sh  dtls_connect_tool.cpp  dtls_server_tool.cpp  ecdsa_tool.cpp  rsa_tool.cpp  test_aes.cpp  test_chacha20.cpp  test_chacha20_poly1305.cpp  test_der_codegen.cpp  test_der_primitives.cpp  test_dtls_handshake.cpp  test_dtls_record.cpp  test_dtls_record_protection.cpp  test_dtls_server.sh  test_ecc.cpp  test_ecdh.cpp  test_ecdsa.cpp  test_fixed_containers.cpp  test_gcm.cpp  test_hostname_verifier.cpp  test_lexer.cpp  test_mozilla_roots.cpp  test_number.cpp  test_openssl_interop.sh  test_parser.cpp  test_pem.cpp  test_poly1305.cpp  test_private_key.cpp  test_random.cpp  test_rsa.cpp  test_sha2.cpp  test_tcp_transport.cpp  test_tls13_connection.cpp  test_tls13_extensions.cpp  test_tls13_handshake.cpp  test_tls13_key_schedule.cpp  test_tls13_openssl_server.sh  test_tls13_record_protection.cpp  test_tls13_self_interop.sh  test_tls13_server.sh  (+18 more)
